# todoist-mcp

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: precommit.md  review.md  setup-repo.md  tdd-check.md
.github/: PULL_REQUEST_TEMPLATE.md  claude-code-review.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  integration-testing.md  plan.md  progress.md  troubleshooting.md
docs/plan/issues/: 10_add_troubleshooting_guide_for_common_issues.md  18_update_documentation_for_claude_code_mcp_setup_using_cli.md  19_add_time_based_filtering_for_tasks.md  1_create_todoist_mcp_server.md  4_add_proper_unit_tests_with_mocked_success_scenarios.md  5_add_input_validation_for_priority_task_id_and_other_parameters.md  6_add_ci_workflow_to_verify_tests_and_coverage.md  7_add_logging_infrastructure_for_debugging_and_monitoring.md  8_implement_rate_limit_handling_for_todoist_api.md  9_add_integration_test_documentation.md
docs/plan/pr/: 011_code_review_feedback.md  13_ci_workflow_code_review_feedback.md
src/todoist_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_integration.py  test_server.py
